Neatening up and trying to control gha triggers

--- a/.github/workflows/check-quizzes.yml
+++ b/.github/workflows/check-quizzes.yml
@@ -5,12 +5,10 @@ name: Check Leanpub Quizzes
 
 on:
   workflow_dispatch:
-### UNCOMMENT THIS SECTION IF YOU WISH PREPARE YOUR COURSE QUIZZES FOR LEANPUB AUTOMATICALLY
-#  pull_request:
-#    branches: [ main, staging]
-#    paths:
-#      - 'quizzes/*'
-######### END OF SECTION #########
+    pull_request:
+      branches: [ main, staging]
+      paths:
+        - 'quizzes/*'
 
 jobs:
   check-quizzes:
