--- a/.github/workflows/render-leanpub.yml
+++ b/.github/workflows/render-leanpub.yml
@@ -5,17 +5,15 @@ name: Render and publish Leanpub
 
 on:
   workflow_dispatch:
-### UNCOMMENT THIS SECTION IF YOU WISH PREPARE YOUR COURSE FOR LEANPUB AUTOMATICALLY
-    # workflows: [ "Render Bookdown and Coursera" ]
-    # branches: [ main ]
-    # types:
-    #   - completed
-    # paths:
-    #   - '**.Rmd'
-    #   - docker/*
-    #   - assets/*
-    #   - quizzes/*
-######### END OF SECTION #########
+    workflows: [ "Render Bookdown and Coursera" ]
+    branches: [ main ]
+    types:
+      - completed
+    paths:
+      - '**.Rmd'
+      - docker/*
+      - assets/*
+      - quizzes/*
 
 jobs:
   # This workflow contains a single job called "build-all"
