--- a/.github/workflows/delete-preview.yml
+++ b/.github/workflows/delete-preview.yml
@@ -2,9 +2,11 @@
 
 name: Delete Preview
 
+#---TRIGGER-START---#
 on:
   pull_request:
     types: [closed]
+#---TRIGGER-END---#
 
 jobs:
   build-all:
