--- a/.github/workflows/check-quizzes.yml
+++ b/.github/workflows/check-quizzes.yml
@@ -3,12 +3,14 @@
 
 name: Check Leanpub Quizzes
 
+#---TRIGGER-START---#
 on:
   workflow_dispatch:
     pull_request:
       branches: [ main, staging]
       paths:
         - 'quizzes/*'
+#---TRIGGER-END----#
 
 jobs:
   check-quizzes:
