--- a/.github/workflows/release-notes.yml
+++ b/.github/workflows/release-notes.yml
@@ -2,10 +2,12 @@
 
 name: Release note PR comment
 
+#---TRIGGER-START---#
 on:
   pull_request:
     branches: [ main ]
     types: [ opened ]
+#---TRIGGER-END----#
 
 jobs:
   pr-comment:
