--- a/.github/workflows/render-leanpub.yml
+++ b/.github/workflows/render-leanpub.yml
@@ -3,6 +3,7 @@
 
 name: Render and publish Leanpub
 
+#---TRIGGER-START---#
 on:
   workflow_dispatch:
   workflow_run:
@@ -15,6 +16,7 @@ on:
       - docker/*
       - assets/*
       - quizzes/*
+#---TRIGGER-END----#
 
 jobs:
   # This workflow contains a single job called "build-all"
