--- a/.github/workflows/send-updates.yml
+++ b/.github/workflows/send-updates.yml
@@ -2,6 +2,7 @@
 
 name: Sync Files
 
+#---TRIGGER-START---#
 on:
   release:
     types:
@@ -12,6 +13,7 @@ on:
         description: 'Tag to use?'
         required: true
         default: 'null'
+#---TRIGGER-END----#
 
 jobs:
   sync:
