--- a/.github/workflows/starting-course.yml
+++ b/.github/workflows/starting-course.yml
@@ -2,11 +2,15 @@
 # by Candace Savonen for this repository.
 
 name: Starting a new course
+
+
+#---TRIGGER-START---#
 on:
   push:
     branches:
       - main
   workflow_dispatch:
+#---TRIGGER-END---#
 
 jobs:
   # Run cleaning process only if workflow is triggered by not being in the Bookdown template anymore
