Get rid of packages.bib

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -7,7 +7,7 @@ rmd_files: ["index.Rmd",
             "About.Rmd",
             "References.Rmd"]
 new_session: yes
-bibliography: [book.bib, packages.bib]
+bibliography: book.bib
 delete_merged_file: true
 language:
   ui:
