--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -60,6 +60,19 @@ group:
     - source: style-sets
       dest: style-sets
 
+  repos: |
+    jhudsl/OTTR_Template_Website
+  - source: .github/workflows/style-and-sp-check.yml
+    dest: .github/workflows/style-and-sp-check.yml
+  - source: .github/workflows/url-checker.yml
+    dest: .github/workflows/url-checker.yml
+  - source: scripts/spell-check.R
+    dest: scripts/spell-check.R
+  - source: scripts/get_spell_errors.R
+    dest: scripts/get_spell_errors.R
+  - source: scripts/git_repo_check.R
+    dest: scripts/git_repo_check.R
+
 ###### TO ADD NEW REPOSITORY USE THIS FORMAT; Feel free to add/drop files that
 # you specifically would like synced (or not).
 #
