--- a/.github/workflows/render-leanpub.yml
+++ b/.github/workflows/render-leanpub.yml
@@ -3,11 +3,14 @@
 
 name: Render and publish Leanpub
 
-
-
 #---TRIGGER-START---#
 on:
   workflow_dispatch:
+  workflow_run:
+    workflows: [ "Render Bookdown and Coursera" ]
+    branches: [ main ]
+    types:
+      - completed
 #---TRIGGER-END----#
 
 jobs:
