--- a/.github/workflows/manage-gha.yml
+++ b/.github/workflows/manage-gha.yml
@@ -20,11 +20,9 @@ jobs:
           git config --local user.email "itcrtrainingnetwork@gmail.com"
           git config --local user.name "jhudsl-robot"
 
-      # Cleanup Template-specific bits
-      - name: Cleanup
-        run: Rscript --vanilla scripts/employ-gha-switches
+      - name: Run GHA switches script
+        run: Rscript --vanilla scripts/employ-gha-switches.R
 
-      # Commit modified files
       - name: Commit updated workflows to current branch
         id: commit_it
         run: |
