Switch what image we use

--- a/.github/workflows/manage-gha.yml
+++ b/.github/workflows/manage-gha.yml
@@ -11,6 +11,9 @@ jobs:
   update-triggers:
     name: Manage GHA
     runs-on: ubuntu-latest
+    container:
+      image: jhudsl/course_template
+      
     steps:
       - name: checkout repo
         uses: actions/checkout@v2
