--- a/.github/workflows/manage-gha.yml
+++ b/.github/workflows/manage-gha.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: jhudsl/course_template
-      
+
     steps:
       - name: checkout repo
         uses: actions/checkout@v2
@@ -31,4 +31,4 @@ jobs:
         run: |
           git add .github/workflows
           git commit -m "Update GitHub Actions"
-          git push || echo no changes to push
+          git push origin || echo "No changes to commit"
