--- a/.github/workflows/starting-course.yml
+++ b/.github/workflows/starting-course.yml
@@ -2,11 +2,14 @@
 # by Candace Savonen for this repository.
 
 name: Starting a new course
+
+
+#---TRIGGER-START---#
 on:
   push:
-    branches:
-      - main
+    branches: [ main, staging ]
   workflow_dispatch:
+#---TRIGGER-END---#
 
 jobs:
   # Run cleaning process only if workflow is triggered by not being in the Bookdown template anymore
@@ -35,6 +38,8 @@ jobs:
             .github/sync.yml \
             .github/test-sync.yml \
             .github/workflows/starting-course.yml \
+            # For now, getting rid of this since it adds more confusion than helpfulness
+            .github/workflows/docker-build-test.yml \
             .github/ISSUE_TEMPLATE/course-template-problem-report.md \
             .github/ISSUE_TEMPLATE/course-template-feature-request.md \
             resources/code_output \
@@ -50,6 +55,7 @@ jobs:
             docs/*.html \
             docs/*.md \
             manuscript/*
+
 
       # Commit modified files
       - name: Commit deleted files
