--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -1,20 +1,15 @@
-# This code was originally written by Josh Shapiro
-# for the Childhood Cancer Data Lab, an initiative of Alexs Lemonade Stand Foundation.
-# https://github.com/AlexsLemonade/refinebio-examples/blob/33cdeff66d57f9fe8ee4fcb5156aea4ac2dce07f/.github/workflows/style-and-sp-check.yml#L1
+# Candace Savonen Apr 2021
 
-# Adapted for this jhudsl repository by Candace Savonen Apr 2021
+name: Build of Docker
 
-name: Test build of Dockerfile
 
-# Controls when the action will run. Triggers the workflow for a pull request for
-# master
+#---TRIGGER-START---#
 on:
   release:
     types:
       - created
   pull_request:
-    branches:
-      - 'main'
+    branches: [ main, staging ]
     paths: [ docker/Dockerfile, docker/github_package_list.tsv ]
   workflow_dispatch:
     inputs:
@@ -22,20 +17,17 @@ on:
         description: 'Push to Dockerhub?'
         required: true
         default: 'false'
+#---TRIGGER-END----#
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  build-docker:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: checkout repo
         uses: actions/checkout@v2
 
-      - name: login as jhudsl-robot
+      - name: Login as jhudsl-robot
         run: |
           git config --local user.email "itcrtrainingnetwork@gmail.com"
           git config --local user.name "jhudsl-robot"
