--- a/.github/workflows/render-coursera.yml
+++ b/.github/workflows/render-coursera.yml
@@ -1,20 +1,20 @@
 
 # Candace Savonen Apr 2021
 
-name: Render Bookdown
+name: Render Coursera
 
 #---TRIGGER-START---#
 on:
   workflow_dispatch:
-  push:
+  workflow_run:
+    workflows: [ "Render Bookdown" ]
     branches: [ main, staging ]
-    paths:
-      - '**.Rmd'
-      - assets/*
+    types:
+      - completed
 #---TRIGGER-END----#
 
 jobs:
-  render-bookdown:
+  render-coursera:
     runs-on: ubuntu-latest
     container:
       image: jhudsl/course_template
@@ -31,30 +31,24 @@ jobs:
           git config --local user.email "itcrtrainingnetwork@gmail.com"
           git config --local user.name "jhudsl-robot"
           
-      # We want a fresh run of the renders each time
-      - name: Delete old docs/*
-        run: rm -r docs/*
-
-      # Run bookdown rendering
-      - name: Run bookdown render
-        id: bookdown
-        run: |
-          Rscript -e "bookdown::render_book('index.Rmd', output_format = 'all');
-          file.copy(from = 'assets', to = 'docs/assets', overwrite = TRUE)"
+      # Run Coursera version
+      - name: Run Coursera version of render
+        id: coursera
+        run: Rscript -e "ottr::render_coursera(convert_quizzes = TRUE)"
 
       # This checks on the steps before it and makes sure that they completed.
       # If the renders didn't complete we don't want to commit the file changes
-      - name: Check on render step
-        if: steps.bookdown.outcome != 'success'
+      - name: Check on render steps
+        if: steps.coursera.outcome != 'success'
         run: |
-          echo Bookdown status ${{steps.bookdown.outcome}}
+          echo Coursera status ${{steps.coursera.outcome}}
           exit 1
 
       # Commit the rendered bookdown files
-      - name: Commit rendered bookdown files
+      - name: Commit rendered Coursera files
         run: |
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
-          git add --force docs/*
-          git commit -m 'Render bookdown' || echo "No changes to commit"
+          git add --force docs/coursera/*
+          git commit -m 'Render Coursera' || echo "No changes to commit"
           git push origin main || echo "No changes to push"
