--- a/.github/workflows/style-and-sp-check.yml
+++ b/.github/workflows/style-and-sp-check.yml
@@ -2,15 +2,13 @@
 
 name: Style and spell check R markdowns
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the main branch
+#---TRIGGER-START---#
 on:
   pull_request:
-    branches: [ main ]
+    branches: [ main, staging ]
+#---TRIGGER-END---#
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "style and check"
   style-n-check:
     runs-on: ubuntu-latest
     container:
