--- a/.github/workflows/test-send-updates.yml
+++ b/.github/workflows/test-send-updates.yml
@@ -2,6 +2,7 @@
 
 name: Test Sync Files
 
+#---TRIGGER-START---#
 on:
   workflow_dispatch:
     inputs:
@@ -9,6 +10,7 @@ on:
         description: 'What repo to test on e.g. jhudsl/OTTR_Template_Test'
         required: true
         default: 'jhudsl/OTTR_Template_Test'
+#---TRIGGER-END----#
 
 jobs:
   test-sync:
