--- a/.github/workflows/url-checker.yml
+++ b/.github/workflows/url-checker.yml
@@ -3,22 +3,22 @@
 # This github actions tests URLs in the Rmd files, README, and CONTRIBUTING.md
 name: Check URLs
 
-# This will be run upon PRs to main
+#---TRIGGER-START---#
 on:
   workflow_dispatch:
   pull_request:
-    branches: [ main ]
+    branches: [ main, staging ]
+#---TRIGGER-END----#
 
-# Here's the main action of checking URLs
 jobs:
-  build:
+  url-check:
     runs-on: ubuntu-latest
 
     steps:
       - name: checkout repo
         uses: actions/checkout@v2
 
-      - name: login as jhudsl-robot
+      - name: Login as jhudsl-robot
         run: |
           git config --local user.email "itcrtrainingnetwork@gmail.com"
           git config --local user.name "jhudsl-robot"
@@ -30,7 +30,7 @@ jobs:
           cleanup: true
 
           # A comma-separated list of file types to cover in the URL checks
-          file_types: .Rmd
+          file_types: .Rmd,.md
 
           # Choose whether to include file with no URLs in the prints.
           print_all: false
