--- a/.github/workflows/style-and-sp-check.yml
+++ b/.github/workflows/style-and-sp-check.yml
@@ -55,18 +55,10 @@ jobs:
       - name: Commit spell check errors
         run: |
           branch_name='preview-${{ github.event.pull_request.number }}'
-          git diff --name-only origin/main -- resources/spell_check_results.tsv >/dev/null && changes=true || changes=false
-          echo $changes
-          if $changes == true; then
-            git diff --name-only origin/$branch_name -- resources/spell_check_results.tsv >/dev/null && changes=true || changes=false
-            echo $changes
-            if $changes == true; then
-              git add --force resources/spell_check_results.tsv
-              git diff-index --quiet HEAD || git commit -m 'Add spell check file'
-              git pull --set-upstream origin $branch_name --allow-unrelated-histories
-              git push --force origin $branch_name
-            fi
-          fi
+          git add --force resources/spell_check_results.tsv
+          git commit -m 'Add spell check file' || echo "No changes to commit"
+          git pull --set-upstream origin $branch_name --allow-unrelated-histories
+          git push --force origin $branch_name || echo "No changes to commit"
 
       - name: Build components of the spell check comment
         id: build-components
