Add the polishing changes from #435 in their own PR (#442)
* Add the polishing changes

* No manage-gha

* No login needed

* Make it simpler for commits and pushes

--- a/.github/workflows/release-notes.yml
+++ b/.github/workflows/release-notes.yml
@@ -2,10 +2,12 @@
 
 name: Release note PR comment
 
+#---TRIGGER-START---#
 on:
   pull_request:
-    branches: [ main ]
+    branches: [ main, staging ]
     types: [ opened ]
+#---TRIGGER-END----#
 
 jobs:
   pr-comment:
