--- a/.github/workflows/style-and-sp-check.yml
+++ b/.github/workflows/style-and-sp-check.yml
@@ -9,6 +9,22 @@ on:
 #---TRIGGER-END---#
 
 jobs:
+
+  yaml-check:
+    name: "Check user automation preferences"
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+        # Use the yaml-env-action action.
+      - name: Load environment from YAML
+        uses: doughepi/yaml-env-action@v1.0.0
+        with:
+            files: params.yaml # Pass a space-separated list of configuration files. Rightmost files take precedence.
+      - run: echo "${{ env.CHECK_QUIZZES }}"
+        if: ${{ env.CHECK_QUIZZES == 'yes' }}
+  
   style-n-check:
     runs-on: ubuntu-latest
     container:
