--- a/.github/workflows/style-and-sp-check.yml
+++ b/.github/workflows/style-and-sp-check.yml
@@ -26,7 +26,6 @@ jobs:
         if: ${{ env.CHECK_QUIZZES == 'yes' }}
   
   style-n-check:
-    if: ${{ CHECK_QUIZZES == 'yes' }}
     needs: yaml-check
     runs-on: ubuntu-latest
     container:
@@ -37,6 +36,9 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+          
+      - name: check that the file carries over
+        run: echo ${{needs.yaml-check.steps.env.CHECK_QUIZZES}}
 
       - name: Configure git
         run: |
