--- a/.github/workflows/url-checker.yml
+++ b/.github/workflows/url-checker.yml
@@ -11,10 +11,26 @@ on:
 #---TRIGGER-END----#
 
 jobs:
-  url-check:
-    runs-on: ubuntu-latest
 
+  yaml-check:
+    name: "Confirm user automation choices"
+    runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+        # Use the yaml-env-action action.
+      - name: Load environment from YAML
+        uses: doughepi/yaml-env-action@v1.0.0
+        with:
+            files: config_automation.yml # Pass a space-separated list of configuration files. Rightmost files take precedence.
+    outputs:
+      toggle: "${{ env.URL_CHECKER }}"
+
+  style-n-check:
+    needs: yaml-check
+    runs-on: ubuntu-latest
+    if: ${{needs.yaml-check.outputs.toggle == 'yes'}}
       - name: checkout repo
         uses: actions/checkout@v2
 
