--- a/.github/workflows/url-checker.yml
+++ b/.github/workflows/url-checker.yml
@@ -31,6 +31,8 @@ jobs:
     needs: yaml-check
     runs-on: ubuntu-latest
     if: ${{needs.yaml-check.outputs.toggle == 'yes'}}
+
+    steps:
     - name: checkout repo
       uses: actions/checkout@v2
 
