--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -24,8 +24,8 @@ jobs:
             files: config_automation.yml # Pass a space-separated list of configuration files. Rightmost files take precedence.
     outputs:
       toggle_spell_check: "${{ env.STYLE_AND_SP_CHECK }}"
-      toggle_url_check: "${{ env.URL_CHECK }}"
-      toggle_quiz_check: "${{ env.QUIZ_CHECK }}"
+      toggle_url_check: "${{ env.URL_CHECKER }}"
+      toggle_quiz_check: "${{ env.CHECK_QUIZZES }}"
       toggle_render_preview: "${{ env.RENDER_PREVIEW }}"
 
   style-n-check:
