--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -2,16 +2,14 @@
 
 name: Pull Request
 
-#---TRIGGER-START---#
 on:
   pull_request:
     branches: [ main, staging ]
-#---TRIGGER-END---#
 
 jobs:
 
   yaml-check:
-    name: "Confirm user automation choices"
+    name: Load user automation choices
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -27,6 +25,7 @@ jobs:
       toggle_spell_check: "${{ env.STYLE_AND_SP_CHECK }}"
       toggle_url_check: "${{ env.URL_CHECKER }}"
       toggle_render_preview: "${{ env.RENDER_PREVIEW }}"
+      toggle_docker_build: "${{ env.DOCKER_BUILD }}"
 
   style-n-check:
     needs: yaml-check
@@ -386,3 +385,71 @@ jobs:
 
             _Updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
           edit-mode: replace
+
+  build-docker:
+    needs: yaml-check
+    runs-on: ubuntu-latest
+    if: ${{needs.yaml-check.outputs.toggle_docker_build == 'yes' && }}
+
+    steps:
+      - name: Verify Dockerfiles changed?
+        uses: tj-actions/verify-changed-files@v8.8
+        id: verify-changed-files
+        with:
+          files: |
+             docker/Dockerfile
+             docker/github_package_list.tsv
+
+      - name: checkout repo
+        if: steps.verify-changed-files.outputs.files_changed == 'true'
+        uses: actions/checkout@v2
+
+      - name: Login as jhudsl-robot
+        if: steps.verify-changed-files.outputs.files_changed == 'true'
+        run: |
+          git config --local user.email "itcrtrainingnetwork@gmail.com"
+          git config --local user.name "jhudsl-robot"
+
+      - name: Don't re-test if this is a sync branch
+        if: ${{ github.head_ref == 'repo-sync/OTTR_Template/default' && steps.verify-changed-files.outputs.files_changed == 'true'}}
+        run: |
+          echo This was tested on OTTR_Template no need to re-run
+
+      # Set up Docker build
+      - name: Set up Docker Buildx
+        if: ${{ github.head_ref != 'repo-sync/OTTR_Template/default' && steps.verify-changed-files.outputs.files_changed == 'true'}}
+        uses: docker/setup-buildx-action@v1
+
+      # Setup layer cache
+      - name: Cache Docker layers
+        if: ${{ github.head_ref != 'repo-sync/OTTR_Template/default' && steps.verify-changed-files.outputs.files_changed == 'true'}}
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
+      - name: Set up Docker Build
+        if: ${{ github.head_ref != 'repo-sync/OTTR_Template/default' && steps.verify-changed-files.outputs.files_changed == 'true'}}
+        uses: docker/setup-buildx-action@v1
+
+      - name: Get token
+        if: ${{ github.head_ref != 'repo-sync/OTTR_Template/default' && steps.verify-changed-files.outputs.files_changed == 'true'}}
+        run: echo ${{ secrets.GH_PAT }} > docker/git_token.txt
+
+      - name: Build Docker image
+        if: ${{ github.head_ref != 'repo-sync/OTTR_Template/default' && steps.verify-changed-files.outputs.files_changed == 'true'}}
+        uses: docker/build-push-action@v2
+        with:
+          push: false
+          load: true
+          context: docker
+          file: docker/Dockerfile
+          tags: jhudsl/course_template
+
+      - name: Get the version
+        if: ${{ github.head_ref != 'repo-sync/OTTR_Template/default' && steps.verify-changed-files.outputs.files_changed == 'true'}}
+        id: get_version
+        run: |
+          echo ::set-output name=version::$(echo $GITHUB_REF | cut -d / -f 3)
