--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -389,7 +389,7 @@ jobs:
   build-docker:
     needs: yaml-check
     runs-on: ubuntu-latest
-    if: ${{needs.yaml-check.outputs.toggle_docker_build == 'yes' && }}
+    if: ${{needs.yaml-check.outputs.toggle_docker_build == 'yes'}}
 
     steps:
       - name: Verify Dockerfiles changed?
