--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -20,12 +20,22 @@ jobs:
         uses: doughepi/yaml-env-action@v1.0.0
         with:
             files: config_automation.yml # Pass a space-separated list of configuration files. Rightmost files take precedence.
+
+      - name: Verify Dockerfiles changed?
+        uses: tj-actions/verify-changed-files@v8.8
+        id: verify-changed-files
+        with:
+          files: |
+             docker/Dockerfile
+             docker/github_package_list.tsv
+
     outputs:
       toggle_quiz_check: "${{ env.CHECK_QUIZZES }}"
       toggle_spell_check: "${{ env.STYLE_AND_SP_CHECK }}"
       toggle_url_check: "${{ env.URL_CHECKER }}"
       toggle_render_preview: "${{ env.RENDER_PREVIEW }}"
       toggle_docker_build: "${{ env.DOCKER_BUILD }}"
+      dockerfiles_changed: steps.verify-changed-files.outputs.files_changed
 
   style-n-check:
     needs: yaml-check
@@ -389,7 +399,7 @@ jobs:
   build-docker:
     needs: yaml-check
     runs-on: ubuntu-latest
-    if: ${{needs.yaml-check.outputs.toggle_docker_build == 'yes'}}
+    if: ${{needs.yaml-check.outputs.toggle_docker_build == 'yes' && needs.yaml-check.outputs.dockerfiles_changed == 'true' && github.head_ref != 'repo-sync/OTTR_Template/default'}}
 
     steps:
       - name: checkout repo
@@ -404,24 +414,16 @@ jobs:
              docker/github_package_list.tsv
 
       - name: Login as jhudsl-robot
-        if: steps.verify-changed-files.outputs.files_changed == 'true'
         run: |
           git config --local user.email "itcrtrainingnetwork@gmail.com"
           git config --local user.name "jhudsl-robot"
 
-      - name: Don't re-test if this is a sync branch
-        if: ${{ github.head_ref == 'repo-sync/OTTR_Template/default' && steps.verify-changed-files.outputs.files_changed == 'true'}}
-        run: |
-          echo This was tested on OTTR_Template no need to re-run
-
       # Set up Docker build
       - name: Set up Docker Buildx
-        if: ${{ github.head_ref != 'repo-sync/OTTR_Template/default' && steps.verify-changed-files.outputs.files_changed == 'true'}}
         uses: docker/setup-buildx-action@v1
 
       # Setup layer cache
       - name: Cache Docker layers
-        if: ${{ github.head_ref != 'repo-sync/OTTR_Template/default' && steps.verify-changed-files.outputs.files_changed == 'true'}}
         uses: actions/cache@v2
         with:
           path: /tmp/.buildx-cache
@@ -430,15 +432,12 @@ jobs:
             ${{ runner.os }}-buildx-
 
       - name: Set up Docker Build
-        if: ${{ github.head_ref != 'repo-sync/OTTR_Template/default' && steps.verify-changed-files.outputs.files_changed == 'true'}}
         uses: docker/setup-buildx-action@v1
 
       - name: Get token
-        if: ${{ github.head_ref != 'repo-sync/OTTR_Template/default' && steps.verify-changed-files.outputs.files_changed == 'true'}}
         run: echo ${{ secrets.GH_PAT }} > docker/git_token.txt
 
       - name: Build Docker image
-        if: ${{ github.head_ref != 'repo-sync/OTTR_Template/default' && steps.verify-changed-files.outputs.files_changed == 'true'}}
         uses: docker/build-push-action@v2
         with:
           push: false
