--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -3,20 +3,22 @@
 
 group:
   - files:
-      - source: .github/workflows/render-bookdown.yml
-        dest: .github/workflows/render-bookdown.yml
-      - source: .github/workflows/render-preview.yml
-        dest: .github/workflows/render-preview.yml
-      - source: .github/workflows/render-leanpub.yml
-        dest: .github/workflows/render-leanpub.yml
-      - source: .github/workflows/docker-build-test.yml
-        dest: .github/workflows/docker-build-test.yml
+      - source: config_automation.yml
+        dest: config_automation.yml
+      - source: .github/workflows/
+        dest: .github/workflows/
+        deleteOrphaned: true
+      - source: scripts/
+        dest: scripts/
+        deleteOrphaned: true
+      - source: .github/workflows/pull-request.yml
+        dest: .github/workflows/pull-request.yml
+      - source: .github/workflows/render-all.yml
+        dest: .github/workflows/render-all.yml
+      - source: .github/workflows/docker-build.yml
+        dest: .github/workflows/docker-build.yml
       - source: .github/workflows/transfer-rendered-files.yml
         dest: .github/workflows/transfer-rendered-files.yml
-      - source: .github/workflows/style-and-sp-check.yml
-        dest: .github/workflows/style-and-sp-check.yml
-      - source: .github/workflows/url-checker.yml
-        dest: .github/workflows/url-checker.yml
       - source: .github/workflows/release-notes.yml
         dest: .github/workflows/release-notes.yml
       - source: .github/workflows/delete-preview.yml
@@ -29,8 +31,6 @@ group:
         dest: scripts/make_screenshots.R
       - source: scripts/spell-check.R
         dest: scripts/spell-check.R
-      - source: scripts/get_spell_errors.R
-        dest: scripts/get_spell_errors.R
       - source: scripts/git_repo_check.R
         dest: scripts/git_repo_check.R
       - source: code_of_conduct.md
@@ -62,10 +62,8 @@ group:
 
 ### This is a custom group for this repo which doesn't want syncing on all the files ###
   - files:
-    - source: .github/workflows/style-and-sp-check.yml
-      dest: .github/workflows/style-and-sp-check.yml
-    - source: .github/workflows/url-checker.yml
-      dest: .github/workflows/url-checker.yml
+    - source: .github/workflows/pull-request.yml
+      dest: .github/workflows/pull-request.yml
     - source: scripts/spell-check.R
       dest: scripts/spell-check.R
     repos: |
