--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -38,6 +38,7 @@ jobs:
       dockerfiles_changed: steps.verify-changed-files.outputs.files_changed
 
   style-n-check:
+    name: Check style and spelling
     needs: yaml-check
     runs-on: ubuntu-latest
     if: ${{needs.yaml-check.outputs.toggle_spell_check == 'yes'}}
@@ -148,6 +149,7 @@ jobs:
           git push origin || echo "No changes to commit"
 
   url-check:
+    name: Check URLs
     needs: yaml-check
     runs-on: ubuntu-latest
     if: ${{needs.yaml-check.outputs.toggle_url_check == 'yes'}}
@@ -180,6 +182,7 @@ jobs:
         force_pass : true
 
   check-quizzes:
+    name: Check Leanpub quizzes
     needs: yaml-check
     runs-on: ubuntu-latest
     container:
@@ -284,6 +287,7 @@ jobs:
           edit-mode: replace
 
   render-preview:
+    name: Render preview
     needs: yaml-check
     runs-on: ubuntu-latest
     container:
@@ -397,6 +401,7 @@ jobs:
           edit-mode: replace
 
   build-docker:
+    name: Build Docker image
     needs: yaml-check
     runs-on: ubuntu-latest
     if: ${{needs.yaml-check.outputs.toggle_docker_build == 'yes' && needs.yaml-check.outputs.dockerfiles_changed == 'true' && github.head_ref != 'repo-sync/OTTR_Template/default'}}
