Consolidate and config a rendering GHA  (#449)
* Create config_automation.yml

* Update style-and-sp-check.yml

* Update the filename :expressionless:

* Checking dependency

* Update style-and-sp-check.yml

* Testing that file is carried over

* Add toggle to second check

* Change config to test

* Test removal of some extra text

* Change config to test (again)

* Update config_automation.yml

* What does the output look like with more checks added?

* Fix spacing

* Forgot "steps:"

* BIG YAML

* Get rid of other ones

* Fix names

* Add needs

* Try adding docker to it

* Make a render-all yaml

* Fix syntax

* Gotta check it out first

* Extra "if" lying around

* Set logically differently

* Echo no branch to delete if there is none to delete

* Update sync.yml

* fix syntax

* Fix name of render-all

* Add names

Co-authored-by: AM Hoffman <avamariehoffman@gmail.com>

--- a/.github/workflows/delete-preview.yml
+++ b/.github/workflows/delete-preview.yml
@@ -2,11 +2,9 @@
 
 name: Delete Preview
 
-#---TRIGGER-START---#
 on:
   pull_request:
     types: [closed]
-#---TRIGGER-END---#
 
 jobs:
   delete-preview:
@@ -19,8 +17,7 @@ jobs:
         shell: bash
 
       # Delete the branch!
-      - name: Delete branch
-        uses: dawidd6/action-delete-branch@v3
-        with:
-          github_token: ${{ secrets.GH_PAT }}
-          branches: preview-${{ github.event.pull_request.number }}
+      - name: Delete branch locally and remotely
+        run: |
+          git branch -d preview-${{ github.event.pull_request.number }} || echo "No branch to delete"
+          git push origin --delete preview-${{ github.event.pull_request.number }} || echo "No branch to delete"
