--- a/.github/workflows/render-all.yml
+++ b/.github/workflows/render-all.yml
@@ -78,51 +78,9 @@ jobs:
           git commit -m 'Render bookdown' || echo "No changes to commit"
           git push origin main || echo "No changes to push"
 
-  render-coursera:
-    name: Render Coursera
-    needs: [yaml-check, render-bookdown]
-    runs-on: ubuntu-latest
-    container:
-      image: jhudsl/course_template
-    if: ${{needs.yaml-check.outputs.toggle_coursera == 'yes'}}
-
-    steps:
-      - name: checkout
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-          token: ${{ secrets.GH_PAT }}
-
-      - name: Login as jhudsl-robot
-        run: |
-          git config --local user.email "itcrtrainingnetwork@gmail.com"
-          git config --local user.name "jhudsl-robot"
-
-      # Run Coursera version
-      - name: Run Coursera version of render
-        id: coursera
-        run: Rscript -e "ottr::render_coursera(convert_quizzes = TRUE)"
-
-      # This checks on the steps before it and makes sure that they completed.
-      # If the renders didn't complete we don't want to commit the file changes
-      - name: Check on render steps
-        if: steps.coursera.outcome != 'success'
-        run: |
-          echo Coursera status ${{steps.coursera.outcome}}
-          exit 1
-
-      # Commit the rendered bookdown files
-      - name: Commit rendered Coursera files
-        run: |
-          git config --local user.email "actions@github.com"
-          git config --local user.name "GitHub Actions"
-          git add --force docs/coursera/*
-          git commit -m 'Render Coursera' || echo "No changes to commit"
-          git push origin main || echo "No changes to push"
-
   render-leanpub:
     name: Render Leanpub
-    needs: [yaml-check, render-coursera]
+    needs: [yaml-check]
     runs-on: ubuntu-latest
     container:
       image: jhudsl/ottr
@@ -139,6 +97,11 @@ jobs:
         run: |
           git config --local user.email "itcrtrainingnetwork@gmail.com"
           git config --local user.name "jhudsl-robot"
+
+      # Run TOC less version
+      - name: Run tocless version of render
+        id: no_toc
+        run: Rscript -e "ottr::render_coursera()"
 
       # Create screenshots
       - name: Run the screenshot creation
@@ -166,3 +129,45 @@ jobs:
           git add --force manuscript/*
           git commit -m 'Render Leanpub' || echo "No changes to commit"
           git push --force origin main || echo "No changes to push"
+
+  render-coursera:
+    name: Render Coursera
+    needs: [yaml-check, render-leanpub]
+    runs-on: ubuntu-latest
+    container:
+      image: jhudsl/course_template
+    if: ${{needs.yaml-check.outputs.toggle_coursera == 'yes'}}
+
+    steps:
+      - name: checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.GH_PAT }}
+
+      - name: Login as jhudsl-robot
+        run: |
+          git config --local user.email "itcrtrainingnetwork@gmail.com"
+          git config --local user.name "jhudsl-robot"
+
+      # Run Coursera version
+      - name: Run Coursera version of render
+        id: coursera
+        run: Rscript -e "ottr::convert_coursera_quizzes()"
+
+      # This checks on the steps before it and makes sure that they completed.
+      # If the renders didn't complete we don't want to commit the file changes
+      - name: Check on render steps
+        if: steps.coursera.outcome != 'success'
+        run: |
+          echo Coursera status ${{steps.coursera.outcome}}
+          exit 1
+
+      # Commit the rendered bookdown files
+      - name: Commit rendered Coursera files
+        run: |
+          git config --local user.email "actions@github.com"
+          git config --local user.name "GitHub Actions"
+          git add --force docs/coursera/*
+          git commit -m 'Render Coursera quizzes' || echo "No changes to commit"
+          git push origin main || echo "No changes to push"
