--- a/.github/workflows/render-all.yml
+++ b/.github/workflows/render-all.yml
@@ -78,9 +78,32 @@ jobs:
           git commit -m 'Render bookdown' || echo "No changes to commit"
           git push origin main || echo "No changes to push"
 
+  render-tocless:
+    name: Render TOC-less version for Leanpub or Coursera
+    needs: [yaml-check]
+    runs-on: ubuntu-latest
+    container:
+      image: jhudsl/ottr
+    if: ${{needs.yaml-check.outputs.toggle_coursera == 'yes' || needs.yaml-check.outputs.toggle_leanpub == 'yes'}}
+
+    steps:
+      # Run TOC-less version
+      - name: Run TOC-less version of render
+        id: tocless
+        run: Rscript -e "ottr::render_without_toc()"
+
+      # Commit the TOC-less version files
+      - name: Commit tocless bookdown files
+        run: |
+          git config --local user.email "actions@github.com"
+          git config --local user.name "GitHub Actions"
+          git add --force docs/*
+          git commit -m 'Render toc-less' || echo "No changes to commit"
+          git push origin main || echo "No changes to push"
+
   render-leanpub:
     name: Render Leanpub
-    needs: [yaml-check]
+    needs: [yaml-check, render-tocless]
     runs-on: ubuntu-latest
     container:
       image: jhudsl/ottr
@@ -98,11 +121,6 @@ jobs:
           git config --local user.email "itcrtrainingnetwork@gmail.com"
           git config --local user.name "jhudsl-robot"
 
-      # Run TOC less version
-      - name: Run tocless version of render
-        id: no_toc
-        run: Rscript -e "ottr::render_coursera()"
-
       # Create screenshots
       - name: Run the screenshot creation
         run: |
@@ -114,10 +132,19 @@ jobs:
       - name: Delete old manuscript/
         run: rm -rf manuscript/
 
-      # Run Leanpub rendering
-      - name: Run ottr::bookdown_to_embed_leanpub
+      - name: Run ottr::bookdown_to_embed_leanpub -- without re-render
+        if: ${{ needs.yaml-check.outputs.toggle_bookdown == 'yes'}}
         run: |
-          Rscript -e "ottr::bookdown_to_embed_leanpub( \
+          Rscript -e "ottr::bookdown_to_embed_leanpub(
+            render = FALSE \
+            chapt_img_key = 'resources/chapt_screen_images/chapter_urls.tsv', \
+            make_book_txt = TRUE)"
+
+      - name: Run ottr::bookdown_to_embed_leanpub -- with re-render
+        if: ${{ needs.yaml-check.outputs.toggle_bookdown == 'no'}}
+        run: |
+          rm -r docs/*
+          Rscript -e "ottr::bookdown_to_embed_leanpub(
             chapt_img_key = 'resources/chapt_screen_images/chapter_urls.tsv', \
             make_book_txt = TRUE)"
 
@@ -132,7 +159,7 @@ jobs:
 
   render-coursera:
     name: Render Coursera
-    needs: [yaml-check, render-leanpub]
+    needs: [yaml-check, render-tocless]
     runs-on: ubuntu-latest
     container:
       image: jhudsl/course_template
