--- a/.github/workflows/render-all.yml
+++ b/.github/workflows/render-all.yml
@@ -97,7 +97,7 @@ jobs:
         run: |
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
-          git add --force docs/*
+          git add --force docs/no_toc*
           git commit -m 'Render toc-less' || echo "No changes to commit"
           git push origin main || echo "No changes to push"
 
