--- a/.github/workflows/render-all.yml
+++ b/.github/workflows/render-all.yml
@@ -132,19 +132,10 @@ jobs:
       - name: Delete old manuscript/
         run: rm -rf manuscript/
 
-      - name: Run ottr::bookdown_to_embed_leanpub -- without re-render
-        if: ${{ needs.yaml-check.outputs.toggle_bookdown == 'yes'}}
+      - name: Run ottr::bookdown_to_embed_leanpub
         run: |
           Rscript -e "ottr::bookdown_to_embed_leanpub(
             render = FALSE \
-            chapt_img_key = 'resources/chapt_screen_images/chapter_urls.tsv', \
-            make_book_txt = TRUE)"
-
-      - name: Run ottr::bookdown_to_embed_leanpub -- with re-render
-        if: ${{ needs.yaml-check.outputs.toggle_bookdown == 'no'}}
-        run: |
-          rm -r docs/*
-          Rscript -e "ottr::bookdown_to_embed_leanpub(
             chapt_img_key = 'resources/chapt_screen_images/chapter_urls.tsv', \
             make_book_txt = TRUE)"
 
