Disentangle bookdown/coursera/leanpub rendering.  (#459)
* Rearrange render-all for clarity

* Fix no changes render comment

* Disentangle Leanpub from Coursera from Bookdown

* Update render-tocless

* Delete redundant render

* Fix changes/no_changes bit

* Fix logic

* Incorporate @avahoffman 's comments

--- a/.github/workflows/render-all.yml
+++ b/.github/workflows/render-all.yml
@@ -78,51 +78,33 @@ jobs:
           git commit -m 'Render bookdown' || echo "No changes to commit"
           git push origin main || echo "No changes to push"
 
-  render-coursera:
-    name: Render Coursera
-    needs: [yaml-check, render-bookdown]
+  render-tocless:
+    name: Render TOC-less version for Leanpub or Coursera
+    needs: [yaml-check]
     runs-on: ubuntu-latest
     container:
-      image: jhudsl/course_template
-    if: ${{needs.yaml-check.outputs.toggle_coursera == 'yes'}}
+      image: jhudsl/ottr
+    if: ${{needs.yaml-check.outputs.toggle_coursera == 'yes' || needs.yaml-check.outputs.toggle_leanpub == 'yes'}}
 
     steps:
-      - name: checkout
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-          token: ${{ secrets.GH_PAT }}
+      # Rendered content for Leanpub and Coursera is very similar.
+      # This job creates a shared scaffold for both.
+      - name: Run TOC-less version of render
+        id: tocless
+        run: Rscript -e "ottr::render_without_toc()"
 
-      - name: Login as jhudsl-robot
-        run: |
-          git config --local user.email "itcrtrainingnetwork@gmail.com"
-          git config --local user.name "jhudsl-robot"
-
-      # Run Coursera version
-      - name: Run Coursera version of render
-        id: coursera
-        run: Rscript -e "ottr::render_coursera(convert_quizzes = TRUE)"
-
-      # This checks on the steps before it and makes sure that they completed.
-      # If the renders didn't complete we don't want to commit the file changes
-      - name: Check on render steps
-        if: steps.coursera.outcome != 'success'
-        run: |
-          echo Coursera status ${{steps.coursera.outcome}}
-          exit 1
-
-      # Commit the rendered bookdown files
-      - name: Commit rendered Coursera files
+      # Commit the TOC-less version files
+      - name: Commit tocless bookdown files
         run: |
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
-          git add --force docs/coursera/*
-          git commit -m 'Render Coursera' || echo "No changes to commit"
+          git add --force docs/no_toc*
+          git commit -m 'Render toc-less' || echo "No changes to commit"
           git push origin main || echo "No changes to push"
 
   render-leanpub:
-    name: Render Leanpub
-    needs: [yaml-check, render-coursera]
+    name: Finish Leanpub prep
+    needs: [yaml-check, render-tocless]
     runs-on: ubuntu-latest
     container:
       image: jhudsl/ottr
@@ -151,10 +133,10 @@ jobs:
       - name: Delete old manuscript/
         run: rm -rf manuscript/
 
-      # Run Leanpub rendering
       - name: Run ottr::bookdown_to_embed_leanpub
         run: |
-          Rscript -e "ottr::bookdown_to_embed_leanpub( \
+          Rscript -e "ottr::bookdown_to_embed_leanpub(
+            render = FALSE \
             chapt_img_key = 'resources/chapt_screen_images/chapter_urls.tsv', \
             make_book_txt = TRUE)"
 
@@ -166,3 +148,45 @@ jobs:
           git add --force manuscript/*
           git commit -m 'Render Leanpub' || echo "No changes to commit"
           git push --force origin main || echo "No changes to push"
+
+  render-coursera:
+    name: Finish Coursera prep
+    needs: [yaml-check, render-tocless]
+    runs-on: ubuntu-latest
+    container:
+      image: jhudsl/course_template
+    if: ${{needs.yaml-check.outputs.toggle_coursera == 'yes'}}
+
+    steps:
+      - name: checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.GH_PAT }}
+
+      - name: Login as jhudsl-robot
+        run: |
+          git config --local user.email "itcrtrainingnetwork@gmail.com"
+          git config --local user.name "jhudsl-robot"
+
+      # Run Coursera version
+      - name: Run Coursera version of render
+        id: coursera
+        run: Rscript -e "ottr::convert_coursera_quizzes()"
+
+      # This checks on the steps before it and makes sure that they completed.
+      # If the renders didn't complete we don't want to commit the file changes
+      - name: Check on render steps
+        if: steps.coursera.outcome != 'success'
+        run: |
+          echo Coursera status ${{steps.coursera.outcome}}
+          exit 1
+
+      # Commit the rendered bookdown files
+      - name: Commit rendered Coursera files
+        run: |
+          git config --local user.email "actions@github.com"
+          git config --local user.name "GitHub Actions"
+          git add --force docs/coursera/*
+          git commit -m 'Render Coursera quizzes' || echo "No changes to commit"
+          git push origin main || echo "No changes to push"
