--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -326,18 +326,20 @@ jobs:
         id: bookdown
         run: Rscript -e "bookdown::render_book('index.Rmd', output_format = 'all')"
 
-      # Run Coursera version
-      - name: Run Coursera version of render
-        id: coursera
-        run: Rscript -e "ottr::render_coursera()"
+      # Run TOC-less version
+      # Rendered content for Leanpub and Coursera is very similar. 
+      # This job creates a shared scaffold for both.
+      - name: Run TOC-less version of render
+        id: tocless
+        run: Rscript -e "ottr::render_without_toc()"
 
       # This checks on the steps before it and makes sure that they completed.
       # If the renders didn't complete we don't want to commit the file changes
       - name: Check on render steps
-        if: steps.bookdown.outcome != 'success' || steps.coursera.outcome != 'success'
+        if: steps.bookdown.outcome != 'success' || steps.tocless.outcome != 'success'
         run: |
           echo Bookdown status ${{steps.bookdown.outcome}}
-          echo Coursera status ${{steps.coursera.outcome}}
+          echo Toc-less status ${{steps.tocless.outcome}}
           exit 1
 
       # Commit the rendered bookdown files
@@ -345,8 +347,10 @@ jobs:
         id: commit
         run: |
           branch_name='preview-${{ github.event.pull_request.number }}'
+          git diff origin/main -- docs >/dev/null && changes=true || changes=false
+          echo ::set-output name=changes::$changes
           git add . --force
-          git commit -m 'Render bookdown preview' || echo "No changes to commit"
+          git commit -m 'Render preview' || echo "No changes to commit"
           git pull --set-upstream origin $branch_name --allow-unrelated-histories
           git push --force || echo "No changes to commit"
         shell: bash
@@ -364,17 +368,17 @@ jobs:
         run: |
           course_name=$(head -n 1 _bookdown.yml | cut -d'"' -f 2| tr " " "-")
           bookdown_link=$(echo "https://htmlpreview.github.io/?https://raw.githubusercontent.com/$GITHUB_REPOSITORY/preview-${{ github.event.pull_request.number }}/docs/index.html")
-          coursera_link=$(echo "https://htmlpreview.github.io/?https://raw.githubusercontent.com/$GITHUB_REPOSITORY/preview-${{ github.event.pull_request.number }}/docs/coursera/index.html")
+          tocless_link=$(echo "https://htmlpreview.github.io/?https://raw.githubusercontent.com/$GITHUB_REPOSITORY/preview-${{ github.event.pull_request.number }}/docs/no_toc/index.html")
           docx_link=$(echo "https://github.com/$GITHUB_REPOSITORY/raw/preview-${{ github.event.pull_request.number }}/docs/$course_name.docx")
           echo ::set-output name=bookdown_link::$bookdown_link
-          echo ::set-output name=coursera_link::$coursera_link
+          echo ::set-output name=tocless_link::$tocless_link
           echo ::set-output name=docx_link::$docx_link
           echo ::set-output name=time::$(date +'%Y-%m-%d')
           echo ::set-output name=commit_id::$GITHUB_SHA
           echo ${{steps.commit.outputs.changes}}
 
       - name: Create or update comment
-        if: steps.commit.outputs.changes == 'changes'
+        if: steps.commit.outputs.changes == 'true'
         uses: peter-evans/create-or-update-comment@v1
         with:
           comment-id: ${{ steps.fc.outputs.comment-id }}
@@ -382,14 +386,14 @@ jobs:
           body: |
             Re-rendered previews from the latest commit:
             - See [preview of Bookdown here](${{ steps.build-components.outputs.bookdown_link }})
-            - See [preview of Coursera version here](${{ steps.build-components.outputs.coursera_link }})
+            - See [preview of Coursera/Leanpub version here](${{ steps.build-components.outputs.tocless_link }})
             - Download the [preview of .docx file](${{ steps.build-components.outputs.docx_link }})
 
             _Updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
           edit-mode: replace
 
-      - name: No comment if no changes
-        if: steps.commit.outputs.changes == 'no_changes'
+      - name: Comment if no changes
+        if: steps.commit.outputs.changes == 'false'
         uses: peter-evans/create-or-update-comment@v1
         with:
           comment-id: ${{ steps.fc.outputs.comment-id }}
